warnings removed