@@ -12,6 +12,7 @@
  * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License. */
 package org.semanticweb.owlapi6.profiles;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
@@ -72,10 +73,11 @@ public enum Profiles implements KnownFactories, OWLProfile, Supplier<OWLProfile>
         try {
             Class<?> c = Class.forName(factoryClassName);
             if (OWLReasonerFactory.class.isAssignableFrom(c)) {
-                return (OWLReasonerFactory) c.newInstance();
+                return (OWLReasonerFactory) c.getConstructor().newInstance();
             }
             throw new OWLRuntimeException("Reasoner factory cannot be instantiated: " + factoryClassName);
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
+        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | IllegalArgumentException
+            | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             throw new OWLRuntimeException("Reasoner factory cannot be instantiated: " + factoryClassName, e);
         }
     }
